webfrontend/html/system/css/main.css
/* Form Error Message */

.form-error-message {
  color: red;
  line-height: 1.5em;
  font-size: 0.75em;
}

/* Main Menu Table */

.menutable {
  padding: 6px 0px 0px 6px;
}

table.menutable td {
  padding: 10px 10px 10px 10px;
  width: 120px;
  text-align: center;
  font-size: 0.6em;
  vertical-align: middle;
}

table.menutable td.caption {
  width: 120px;
  font-size: 2em;
  letter-spacing: 0.25em;
  text-align: left;
  vertical-align: middle;
}

.loxberry-logo /* Loxberry Logo on white workspace */
{ 
  background-image: url("../images/loxberry.svg");
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
}

.ui-panel-wrapper /* Loxberry Logo on gray background to prevent cut logo */
{
  background-image: url("../images/loxberry_ui-panel-wrapper.svg");
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
	
}

.ui-input-text input
{
  background: transparent none;
}

html .ui-body-a .ui-body-inherit /* Transparent Input-Boxes */
{
  background-color: rgba(255, 255, 255, 0.8);
}

.empty_icon
{
  width:64px; 
  height:64px; 
  margin: auto auto; 
  Background-image: url('/system/images/icons/blank_64.png');	
  background-position: center center; 
  background-repeat: no-repeat;"
}

/* Logfiles */
#logerr
{
  text-align:left; width:100%; color:#000000; background-color:#FFE0E0;
}
#logfail
{
  text-align:left; width:100%; color:#000000; background-color:#FFE0E0;
}
#logwarn
{
  text-align:left; width:100%; color:#000000; background-color:#FFE0E0;
}
#logok
{
 text-align:left; width:100%; color:#000000; background-color:#D8FADC;
}
#loginfo
{
 text-align:left; width:100%; color:#000000; background-color:#DDEFFF;
}

